Compiler warnings cleanup