@@ -1,6 +1,6 @@
 /* Copyright (C) 1999-2008 by Peter Eastman
    Modifications Copyright 2016 by Petri Ihalainen
-   Changes copyright (C) 2017 by Maksim Khramov
+   Changes copyright (C) 2017-2023 by Maksim Khramov
 
    This program is free software; you can redistribute it and/or modify it under the
    terms of the GNU General Public License as published by the Free Software
@@ -246,7 +246,7 @@ public class DirectionalLight extends Light
       case 0:
         return color.duplicate();
       case 1:
-        return new Double(intensity);
+        return Double.valueOf(intensity);
       case 2:
         return radius;
       case 3:
